@@ -75,7 +75,9 @@
 #define ERR_SERVICECONFUSED  435
 #define	ERR_NICKCOLLISION    436
 #define ERR_UNAVAILRESOURCE  437
-#define ERR_NICKTOOFAST      438
+#ifdef HOLD_ENFORCED_NICKS
+# define ERR_NICKTOOFAST      438
+#endif
 
 #define ERR_USERNOTINCHANNEL 441
 #define ERR_NOTONCHANNEL     442
